[project]
name = "ip-subnet-calculator"
version = "1.2.0"
description = "A graphical IPv4 subnet calculator and learning tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alessandro Benevelli" },
]
keywords = ["ipv4", "networking", "subnetting", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/alessandrob1-star/ip-subnet-calculator-code-in-place-2026"
Repository = "https://github.com/alessandrob1-star/ip-subnet-calculator-code-in-place-2026"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
